--- a/backend/DockerFile
+++ b/backend/DockerFile
@@ -1,8 +1,11 @@
 FROM node:20-alpine
 WORKDIR /app
 COPY package*.json ./
+COPY prisma ./
 RUN npm install
-COPY . .
 RUN npx prisma generate
+
+COPY . .
+
 EXPOSE 3000
 CMD ["npm", "start"]
