--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    
-    "prisma": "^6.1.0"
+    "prisma": "^6.1.0",
+    "cors": "^2.8.5"
   }
 }
